Javadoc improvements Minor refactor